<resources>
    <string name="app">TimePicker</string>
    <string name="time_picker_example">Time Picker Example</string>
    <string name="time_pick">Pick the time and press save button</string>
    <string name="time_save">Save</string>
    <string name="time_selected"></string>
    <string name="time_current">The Time is:</string>
    <string name="app_name">미세미세알림</string>
    <string name="action_settings">Settings</string>
    <string name="image_description">Weather image</string>
    <string name="button_text">업데이트</string>
    <string name="text_1">미세먼지</string>
    <string name="text_2">초미세먼지</string>
    <string name="text_location">한국</string>
    <string name="title_activity_settings">설정</string>

    <!-- Preference Titles -->
    <string name="settings_header">시간</string>

    <!-- Messages Preferences -->
    <string name="time">Set Time</string>

</resources>
